--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -85,6 +85,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multi Layer Perceptron model for comparison with the CNN versions\n",
+    "\n",
+    "This model uses basic densely connected layers and uses a slight variation of the previously used data generator with no reshaping of the array."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -174,7 +183,7 @@
     }
    ],
    "source": [
-    "dense_model.save('DenseModel-PB')"
+    "dense_model.save('MLPmodel-Long-PB')"
    ]
   },
   {
@@ -222,21 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test = pd.read_csv('fens/test.csv')\n",
-    "# test_gen = ChessPositionGen(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dense_model.save('DenseModel_long.h5')"
+    "dense_model.save('MLPmodel-Long.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Autotuning"
    ]
   },
   {
