training started for tuned model

--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -333,17 +333,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Unresolved object in checkpoint: (root).optimizer.iter\n",
+      "WARNING:tensorflow:Unresolved object in checkpoint: (root).optimizer.beta_1\n",
+      "WARNING:tensorflow:Unresolved object in checkpoint: (root).optimizer.beta_2\n",
+      "WARNING:tensorflow:Unresolved object in checkpoint: (root).optimizer.decay\n",
+      "WARNING:tensorflow:Unresolved object in checkpoint: (root).optimizer.learning_rate\n",
+      "WARNING:tensorflow:A checkpoint was restored (e.g. tf.train.Checkpoint.restore or tf.keras.Model.load_weights) but not all checkpointed values were used. See above for specific issues. Use expect_partial() on the load status object, e.g. tf.train.Checkpoint.restore(...).expect_partial(), to silence these warnings, or use assert_consumed() to make the check explicit. See https://www.tensorflow.org/guide/checkpoint#loading_mechanics for details.\n",
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 8, 8, 120)         99960     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 4, 4, 120)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 4, 4, 120)         921720    \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 1920)              0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 96)                184416    \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1)                 97        \n",
+      "=================================================================\n",
+      "Total params: 1,206,193\n",
+      "Trainable params: 1,206,193\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/30\n",
+      "  55/3953 [..............................] - ETA: 44:01 - loss: 0.3028 - acc: 0.8866"
+     ]
+    }
+   ],
    "source": [
-    "tuned_model = tuner.hypermodel.build(best_hps)\n",
+    "tuned_model = tuner.get_best_models(num_models=1)[0]\n",
+    "tuned_model.build()\n",
+    "tuned_model.summary()\n",
     "\n",
-    "tuned_history = tuned_model.fit(x=train_dense_gen,\n",
-    "                    validation_data=val_dense_gen,\n",
+    "tuned_history = tuned_model.fit(x=train_tune_gen,\n",
+    "                    validation_data=val_tune_gen,\n",
     "                    epochs=30,\n",
     "                    callbacks=[earlystop, tensorboard_callback])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
