game gif function added

--- a/presentation-images.ipynb
+++ b/presentation-images.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import chess\n",
+    "from chess import svg\n",
     "from PIL import Image\n",
     "from cairosvg import svg2png"
    ]
@@ -144,6 +145,37 @@
    "outputs": [],
    "source": [
     "# create_board_breakdown_gif(board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gif_game(moves, outfile):\n",
+    "    \"\"\"\n",
+    "    Creates a game gif based on a move list.\n",
+    "    \"\"\"\n",
+    "    board = chess.Board()\n",
+    "    images = []\n",
+    "\n",
+    "    # Give the full starting position first\n",
+    "    full_board = svg.board(board)\n",
+    "    svg2png(bytestring=full_board, write_to='start.png')\n",
+    "    with Image.open('start.png') as im:\n",
+    "        im.load()\n",
+    "        images.append(im)\n",
+    "\n",
+    "    for ply, move in enumerate(moves):\n",
+    "        board.push_uci(move)\n",
+    "        state = svg.board(board)\n",
+    "        svg2png(bytestring=state, write_to=f'move{ply}.png')\n",
+    "        with Image.open(f'move{ply}.png') as im:\n",
+    "            im.load()\n",
+    "            images.append(im)\n",
+    "\n",
+    "    images[0].save(outfile, save_all=True, append_images=images[1:], optimize=False, duration=500, loop=0)\n"
    ]
   },
   {
