--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -367,7 +367,31 @@
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/30\n",
-      "  55/3953 [..............................] - ETA: 44:01 - loss: 0.3028 - acc: 0.8866"
+      "3953/3953 [==============================] - 2677s 677ms/step - loss: 0.2935 - acc: 0.8893 - val_loss: 0.2870 - val_acc: 0.8919\n",
+      "Epoch 2/30\n",
+      "3953/3953 [==============================] - 2696s 682ms/step - loss: 0.2733 - acc: 0.8959 - val_loss: 0.2728 - val_acc: 0.8965\n",
+      "Epoch 3/30\n",
+      "3953/3953 [==============================] - 2697s 682ms/step - loss: 0.2610 - acc: 0.9002 - val_loss: 0.2653 - val_acc: 0.8992\n",
+      "Epoch 4/30\n",
+      "3953/3953 [==============================] - 2693s 681ms/step - loss: 0.2524 - acc: 0.9032 - val_loss: 0.2617 - val_acc: 0.9006\n",
+      "Epoch 5/30\n",
+      "3953/3953 [==============================] - 2691s 681ms/step - loss: 0.2457 - acc: 0.9055 - val_loss: 0.2578 - val_acc: 0.9014\n",
+      "Epoch 6/30\n",
+      "3953/3953 [==============================] - 2684s 679ms/step - loss: 0.2399 - acc: 0.9074 - val_loss: 0.2564 - val_acc: 0.9021\n",
+      "Epoch 7/30\n",
+      "3953/3953 [==============================] - 2691s 681ms/step - loss: 0.2353 - acc: 0.9091 - val_loss: 0.2547 - val_acc: 0.9031\n",
+      "Epoch 8/30\n",
+      "3953/3953 [==============================] - 2691s 681ms/step - loss: 0.2310 - acc: 0.9106 - val_loss: 0.2568 - val_acc: 0.9032\n",
+      "Epoch 9/30\n",
+      "3953/3953 [==============================] - 2688s 680ms/step - loss: 0.2268 - acc: 0.9120 - val_loss: 0.2552 - val_acc: 0.9033\n",
+      "Epoch 10/30\n",
+      "3953/3953 [==============================] - 2685s 679ms/step - loss: 0.2233 - acc: 0.9131 - val_loss: 0.2560 - val_acc: 0.9034\n",
+      "Epoch 11/30\n",
+      "3953/3953 [==============================] - 2686s 680ms/step - loss: 0.2201 - acc: 0.9142 - val_loss: 0.2550 - val_acc: 0.9034\n",
+      "Epoch 12/30\n",
+      "3953/3953 [==============================] - 2668s 675ms/step - loss: 0.2174 - acc: 0.9151 - val_loss: 0.2561 - val_acc: 0.9033\n",
+      "Restoring model weights from the end of the best epoch.\n",
+      "Epoch 00012: early stopping\n"
      ]
     }
    ],
@@ -380,6 +404,23 @@
     "                    validation_data=val_tune_gen,\n",
     "                    epochs=30,\n",
     "                    callbacks=[earlystop, tensorboard_callback])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: tuned_model-PB/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuned_model.save(\"tuned_model-PB\")"
    ]
   },
   {
