rearrangement and consolidation

--- a/dataorg.ipynb
+++ b/dataorg.ipynb
@@ -9,7 +9,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from fenpreprocessing import puzzle_cleaning, make_converted_file\n",
+    "from data_generation import puzzle_cleaning, make_converted_file\n",
     "from pathlib import Path"
    ]
   },
@@ -61,7 +61,7 @@
    "source": [
     "## Convert to board representation arrays for all legal moves in puzzles\n",
     "\n",
-    "Give the size required, we're not going to use the full sets currently."
+    "The following code is only relevant for the `baseline-models` notebook in `misc-notebooks`. All other models do their preprocessing in the generators."
    ]
   },
   {
@@ -70,9 +70,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_df = pd.read_csv('fens/train.csv', skiprows=36000, nrows=12000, names=['FEN', 'target_move'])\n",
-    "train_partial, almost_test_partial = train_test_split(temp_df, test_size=.1) # Split the data first, we have a large set so will use 90% for training\n",
-    "val_partial, test_partial = train_test_split(almost_test_partial, test_size=.5) # Split test and validation data evenly"
+    "# temp_df = pd.read_csv('fens/train.csv', skiprows=36000, nrows=12000, names=['FEN', 'target_move'])\n",
+    "# train_partial, almost_test_partial = train_test_split(temp_df, test_size=.1) # Split the data first, we have a large set so will use 90% for training\n",
+    "# val_partial, test_partial = train_test_split(almost_test_partial, test_size=.5) # Split test and validation data evenly"
    ]
   },
   {
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "temp_df"
+    "# temp_df"
    ]
   },
   {
@@ -198,20 +198,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = Path('fens')\n",
-    "outdir.mkdir(parents=True, exist_ok=True)\n",
+    "# outdir = Path('fens')\n",
+    "# outdir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "for name, section in {'train_partial4': train_partial, 'test_partial4': test_partial, 'val_partial4': val_partial}.items():\n",
-    "    section.to_csv(outdir / f'cleaned_{name}.csv')\n",
-    "    make_converted_file(outdir / f'cleaned_{name}.csv', outdir / f'converted_{name}.csv')\n"
+    "# for name, section in {'train_partial4': train_partial, 'test_partial4': test_partial, 'val_partial4': val_partial}.items():\n",
+    "#     section.to_csv(outdir / f'cleaned_{name}.csv')\n",
+    "#     make_converted_file(outdir / f'cleaned_{name}.csv', outdir / f'converted_{name}.csv')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -233,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
