--- a/full-puzzle-model.ipynb
+++ b/full-puzzle-model.ipynb
@@ -10,9 +10,8 @@
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import models, layers\n",
-    "from fenpreprocessing import fen_to_array\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "from data_generation import position_generator, fix_positions, ChessPositionGen\n",
+    "from data_generation import ChessPositionGen\n",
     "\n",
     "import datetime\n",
     "%load_ext tensorboard"
@@ -229,7 +228,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%tensorboard --logdir logs/fit\n"
+   ]
   }
  ],
  "metadata": {
