--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -82,8 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_dense_gen = DenseGenerator(train, batch_size=1024)\n",
-    "# val_dense_gen = DenseGenerator(val, batch_size=1024)"
+    "train_dense_gen = DenseGenerator(train, batch_size=1024)\n",
+    "val_dense_gen = DenseGenerator(val, batch_size=1024)"
    ]
   },
   {
@@ -195,7 +195,7 @@
     }
    ],
    "source": [
-    "dense_model.save('MLPmodel-Long-PB')"
+    "# dense_model.save('MLPmodel-Long-PB')"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dense_model.save('MLPmodel-Long.h5')"
+    "# dense_model.save('MLPmodel-Long.h5')"
    ]
   },
   {
@@ -420,15 +420,8 @@
     }
    ],
    "source": [
-    "tuned_model.save(\"tuned_model-PB\")"
+    "# tuned_model.save(\"tuned_model-PB\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
