readme updates and renamings

--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll start with the same setup as in `full-puzzle-model.ipynb`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -329,6 +336,13 @@
     "\n",
     "best_hps=tuner.get_best_hyperparameters()[0]\n",
     "print(best_hps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With parameters found, we can now train our best model."
    ]
   },
   {
