--- a/full-puzzle-model.ipynb
+++ b/full-puzzle-model.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll set early stopping and tensorboard call backs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -65,6 +72,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train test split and data cleaning was performed in the `dataorg` notebook, so we can load our standard cleaned data. As a reminder, this is a list of FEN positions with the target as being the correct move. The data generator will turn this into 5 different potential positions, with the correct move labeled 1 and all other labeled 0."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -82,6 +96,13 @@
    "source": [
     "train_gen = ChessPositionGen(train, batch_size=512)\n",
     "val_gen = ChessPositionGen(val, batch_size=512)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The CNN is pretty much the same as was used in `misc-notebooks/baseline-models.ipynb`, but with the improved data generator, it can be trained on our full training set."
    ]
   },
   {
@@ -190,7 +211,6 @@
     "# Fitting the model\n",
     "full_puzzle_history = full_puzzle_model.fit(x=train_gen,\n",
     "                    validation_data=val_gen,\n",
-    "                    # steps_per_epoch=100,\n",
     "                    epochs=30,\n",
     "                    callbacks=[earlystop, tensorboard_callback]\n",
     "                    )"
@@ -210,7 +230,7 @@
     }
    ],
    "source": [
-    "full_puzzle_model.save('full-puzzle-PB')"
+    "# full_puzzle_model.save('full-puzzle-PB')"
    ]
   },
   {
